# flyweight

./: CMakeLists.txt  Readme.rst  cache.html  extractor.html  genindex.html  index.html  object.html  objects.inv  search.html  searchindex.js  usage.html
_sources/: object.txt
configure/: flyweight-config.cmake.in
docs/: cache.rst  conf.py  extractor.rst  index.rst  object.rst  usage.rst
include/flyweight/: cache.hpp  extractor.hpp  flyweight.hpp  object.hpp
package/: CMakeLists.txt  License.rtf
tests/: CMakeLists.txt  cache.cpp  object.cpp
